--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -1,1 +1,24 @@
+name: MAIL
+on:
+  schedule:
+    - cron: "0 2 * * *"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
+        pip install smtplib
+        
+        
+    - name: Send Mail
+      run: |
+        python mail.py
