--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 name: MAIL
 on:
   schedule:
-    - cron: "0 4 * * *"
+    - cron: "5 4 * * *"
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: superman510/mail@v1
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
