--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ on:
     - cron: "5 4 * * *"
 jobs:
   build:
-
+    name: building
     runs-on: ubuntu-latest
 
     steps:
-    - uses: superman510/mail@v1
+    - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
