--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: MAIL
 on:
   schedule:
-    - cron: "45 5 * * *"
+    - cron: "05 6 * * *"
 jobs:
   build:
     name: building
@@ -17,5 +17,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
-        python ./mail.py
+        python mail.py
         
