--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: MAIL
 on:
   schedule:
-    - cron: "15 7 * * *"
+    - cron: "45 7 * * *"
 jobs:
   build:
     name: building
@@ -17,5 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
-        python mail.py
+    
+    - name: runBash
+        run:bash ./test.sh
         
