--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
         pip install requests
     
     - name: runBash
-        run:bash ./test.sh
+        run：|
+          bash ./test.sh
         
